dev/stylus/front.styl
body
	font: 400 16px Barlow
.set
	display: flex
	flex-direction column
	min-height 100vh
.section
	padding 16px 24px 0
	+desktop()
		padding 16px 40px
		width 100%
.row
	df({
		df:'.row'
	})
	flex-wrap wrap
	+desktop()
		flex-wrap nowrap
.head
	z-index 1000
	.btn
		+desktop()
			padding 8px 16px 9px
	&-row
		padding 4px 0
		align-items: center
		+desktop()
			padding 0
	&-logo
		max-width 142px
		& svg
			height 32px
	&-burger
		w 28px
		&_item,&:after,&:before
			content ''
			wh 28px 2px
			background RGB($pdark_blue)
			display block
		&_item
			margin 6px 0
		+desktop()
			display none
	&-menu
		&-cont
			display none
			+desktop()
				display block
				margin 0 auto
		&_item
			height 40px
			padding 8px 0
			transition .35s ease
			+desktop()
				padding 11px 16px
			a
				color RGB($pdark_blue)
			&.-dropdown
				cursor: pointer
				display flex
				align-items center
				column-gap: 14.35px
			&:hover
				padding 8px 16px
				border-radius 8px
				background-color: RGB($plight_blue,.2)
				+desktop()
					padding: 11px 16px
			&.menu-active
				svg
					transform rotate(180deg)
			span svg
				wh 12px 7px
				transition .35s ease
			position: relative
			&:after
				+desktop()
					wh 100% 40px
					content: ''
					position: absolute
					top: 0

			&:hover
				&>.head-menu_sublist
					opacity: 1
					visibility visible
					display: block
		+desktop()
			display flex
			column-gap 40px
			font 500 16px/19.2px Barlow

		&_sublist
			display: none
			//+desktop()
			w 256px
			position: absolute
			z-index 100
			display: block
			padding 8px
			padding-bottom: 0
			top: 40px
			left: 0
			background: #fff
			box-shadow 0 4px 24px RGBA($plight_blue,.2)
			border 2px solid RGBA($plight_blue,.2)
			border-radius 8px
			opacity: 0
			visibility hidden
			.head-mobile-subitem:hover
				cursor: pointer
				background-color: RGB($plight_blue,.2)
				.head-mobile-subitem_icon use
					fill RGB($pdark_blue)
				span
					color:  RGB($pdark_blue)
			.head-mobile-subitem_icon
				flex 0 0 24px

	&-login
		display none
		+desktop()
			display flex
			column-gap 16px
	&-actions
		margin-left auto
		.-bottom
			position relative
			margin-top 16px
			text-align center
			justify-content center
			svg
				wh 24px
				use
					fill RGB($pdark_gray)
			&:hover
				svg	use
					fill RGB($pdark_blue)
			&:before
				content: ''
				position: absolute
				top: -8px
				left: -8px
				wh calc(100% + (8px * 2)) 2px
				background-color RGBA($plight_blue,.2)
		&-link
			cursor: pointer
			display: flex
			align-items: center
			font-weight: 500
			color RGB($pdark_blue)
			+desktop()
				margin-right: 16px
			&:first-child
				display: none
				+desktop()
					display: block
		&-menu
			position: absolute
			width 100%
			right 24px
			display flex
			top 72px
			justify-content: flex-end;
			column-gap 30px
			+desktop()
				w initial
				position static
				align-items center
				column-gap initial
		.head-menu_sublist
			w 212px
			left initial
			right: 0

		+desktop()
			margin-left 0
		&-user
			wh 25px
			padding: 0!important
			display: none !important
			+desktop()
				wh 40px
				display: flex !important
				align-items: center
				justify-content: center
				svg
					wh 25px
			.head-menu_sublist
				w 256px
	&-mobile
		&-menu
			&-cont
				--header_height: 72px
				wh 100% 100vh //calc( 100vh - var(--header_height) - 20px)
				df({
					df: '.head-mobile-menu-cont'
				})
				flex-direction column
				overflow-y auto
				top 0 //calc( var(--header_height) + 20px)
				position absolute
				padding 96px 24px 0
				left: -100%
				background-color RGB($pwhite)
				z-index 999
				&.-show
					left: 0
				+desktop()
					display: none
				.head-row
					w calc(100% - 48px)
					padding-top 20px
					padding-bottom 20px
					background-color RGB($pwhite)
					position fixed
					top 0
					z-index 1
			display: flex
			flex-direction column
			&.-show
				visibility visible
			&_item
				padding 8px
				margin-bottom 24px
				font 500 16px/19.2px Barlow
				&:hover
					padding 8px
		&-sublist
			display none
			margin-top -16px
			margin-bottom 24px
		&-subitem
			df({
				df: '.head-mobile-subitem'
				ali: center
			})
/* ... */

